--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
-  "name": "react-github-pages",
+  "name": "spa-github-pages",
   "description": "Single Page Apps for GitHub Pages",
-  "author": "Rafael Pedicini <code@rafrex.com>",
-  "license": "MIT",
-  "private": "true",
-  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rafrex/spa-github-pages.git"
   },
-  "bugs": {
-    "url": "https://github.com/rafrex/spa-github-pages/issues"
-  },
-  "homepage": "https://github.com/rafrex/spa-github-pages#readme",
+  "author": "Rafael Pedicini <code@rafrex.com>",
+  "license": "MIT",
   "dependencies": {
-    "babel-core": "^6.8.0",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
     "current-input": "^0.1.0",
-    "react": "^15.0.2",
-    "react-dom": "^15.0.2",
-    "react-router": "^2.4.0",
-    "webpack": "^1.13.0"
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-router": "^2.4.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.9.1",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "webpack": "^1.13.1"
   }
 }
