Update eslint rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,13 @@
   "parser": "babel-eslint",
   "extends": "airbnb",
   "env": {
-    "browser": true
+  "browser": true
+  },
+  "rules": {
+    "no-unused-expressions": ["error", { "allowShortCircuit": true, "allowTernary": true }],
+    "no-plusplus": "off",
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": ["./webpack.config.babel.js"]}],
+    "react/forbid-prop-types": "off"
   },
   "parserOptions": {
     "ecmaFeatures": {
