--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "author": "Rafael Pedicini <code@rafrex.com>",
   "license": "MIT",
   "dependencies": {
-    "current-input": "^1.1.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-interactive": "^0.4.0",
     "react-router": "^3.0.0"
   },
   "devDependencies": {
