--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
   "rules": {
     "no-unused-expressions": ["error", { "allowShortCircuit": true, "allowTernary": true }],
     "no-plusplus": "off",
-    "import/no-extraneous-dependencies": ["error", {"devDependencies": ["./webpack.config.babel.js"]}],
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": ["./webpack.config.js"]}],
     "react/forbid-prop-types": "off",
     "react/jsx-filename-extension": "off"
   },
