--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "author": "Rafael Pedicini <code@rafrex.com>",
   "license": "MIT",
   "dependencies": {
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "react-interactive": "^0.6.1",
     "react-router": "^3.0.0"
   },
