--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
     "no-plusplus": "off",
     "import/no-extraneous-dependencies": ["error", {"devDependencies": ["./webpack.config.js"]}],
     "react/forbid-prop-types": "off",
-    "react/jsx-filename-extension": "off"
+    "react/jsx-filename-extension": "off",
+    "react/no-array-index-key": "off"
   },
   "parserOptions": {
     "ecmaFeatures": {
