--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "spa-github-pages",
-  "version": "5.1.0",
+  "name": "dollar-effect",
+  "version": "1.0.2",
   "private": true,
-  "description": "Single Page Apps for GitHub Pages",
+  "description": "The Dollar Effect is a monthly subscription of $1 dollar to a non-profit of your choice.",
   "scripts": {
     "start": "webpack-dev-server --devtool eval-source-map --history-api-fallback --open",
     "build": "webpack -p"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rafrex/spa-github-pages.git"
+    "url": "git+https://github.com/dollareffect/dollareffect.github.io.git"
   },
-  "author": "Rafael Pedicini <code@rafrex.com>",
+  "author": "Symph",
   "license": "MIT",
   "dependencies": {
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.0.0",
     "react-interactive": "^0.8.1",
     "react-router-dom": "^4.2.2"
